--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
-    <title>Jestoni</title>
+    <title>Jestoni's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
