--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./fav-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Jestoni brion portfolio that include all skills and certificates that will be useful to your company"
+    />
+    <meta
+      name="keywords"
+      content="portfolio, jestoni brion, front end devoloper, back end developer, full stack developer, web developer, technician"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
