--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       name="keywords"
       content="portfolio, jestoni brion, front end devoloper, back end developer, full stack developer, web developer, technician"
     />
+    <meta
+      name="google-site-verification"
+      content="8u8Bx_2a3zlDCVQffd-0CP-bZ53_Rqbn9j3a4wHhYRA"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
